# cdsp

./: .gitignore  CMakeLists.txt  Makefile  README.build.md  README.md  TODO.txt  base.cpp  base.hpp  cdsp.hpp  config.h.cmake  flatten.py  helpers.cpp  helpers.hpp  parameter.cpp  parameter.hpp  sample_buffer.cpp  types.hpp  values.hpp
old/: circular_buffer.hpp
old/abstraction/: pm_voice.cpp
old/primitive/misc/: fm_feedback.cpp
old/primitive/table/: table_phasor.cpp  table_phasor.hpp
primitives/: primitive_base.hpp  primitives_base.cpp  primitives_base.hpp
primitives/envelopes/: adsr.cpp  adsr.hpp  envelopes_base.cpp  envelopes_base.hpp  interpolate_linear.cpp  interpolate_linear.hpp
primitives/math/: add.cpp  add.hpp  multiply.cpp  multiply.hpp
primitives/operators/: add.cpp  add.hpp  base.cpp  base.hpp  multiply.cpp  multiply.hpp  operators_base.cpp  operators_base.hpp
primitives/oscillators/: oscillators_base.cpp  oscillators_base.hpp  phasor.cpp  phasor.hpp  table_interpolate_4.cpp  table_interpolate_4.hpp
primitives/tables/: oscillators_base.cpp  oscillators_base.hpp  phasor.hpp  tab_osc.hpp  table_function.cpp  table_interpolate_4.hpp  table_oscillator.cpp  table_oscillator.hpp  table_phasor.cpp  tables_base.cpp  tables_base.hpp
src/: base.hpp  cdsp.hpp  define.hpp  defines.hpp  dsp.hpp  exception.hpp  exceptions.cpp  exceptions.hpp  graph.hpp  helper.cpp  helper.hpp  helpers.cpp  helpers.hpp  parameter.hpp  sample_buffer.cpp  sample_buffer.hpp  test.cpp  types.hpp  values.hpp
src/abstraction/: pm_voice.cpp  pm_voice.hpp
src/primitive/: primitive_base.cpp  primitive_base.hpp
src/primitive/envelope/: schedule_linear.cpp  schedule_linear.hpp
src/primitive/generator/: impulse.cpp  impulse.hpp  noise.cpp  noise.hpp
src/primitive/math/: add.cpp  add.hpp  multiply.cpp  multiply.hpp  operator_base.cpp  operator_base.hpp
src/primitive/misc/: fm_feedback.hpp
src/primitive/old/envelope/: adsr.cpp
src/primitive/operator/: operator_base.cpp
src/primitive/table/: table_abstract.cpp  table_abstract.hpp  table_function.hpp  table_oscillator.cpp  table_oscillator.hpp
src/primitives/: ideas.txt  primitives_base.hpp
src/primitives/envelopes/: envelopes_base.cpp  envelopes_base.hpp  interpolate_linear.cpp  interpolate_linear.hpp
src/primitives/misc/: fm_feedback.cpp
src/primitives/operators/: multiply.hpp
src/primitives/tables/: table_function.cpp  table_oscillator.cpp  table_oscillator.hpp  table_phasor.cpp  table_phasor.hpp  tables.txt  tables_base.hpp
test/: test_additive.cpp  test_impulse.cpp  test_interpolate_linear.cpp  test_noise.cpp  test_pm_voice.cpp  test_runge_kutta.cpp  test_table_oscillator.cpp
test/old/: test_interpolate_linear.cpp  test_runge_kutta.cpp
